# icebug-graphframes-comparison

./: .gitignore  README.md  benchmark_pagerank_memory.py  graphframes-load-results.csv  graphframes-memory-4g-results.csv  graphframes-memory-8g-results.csv  graphframes-memory-results.csv  icebug-memory-duckdb-1gb-results.csv  icebug-memory-duckdb-200mb-results.csv  icebug-memory-results-rerun.csv  icebug-memory-results.csv  mkdocs.yml  pyproject.toml
.github/workflows/: benchmark-pages.yml
docs/: index.md  results.md
scripts/: render_results.py
templates/: results.md.j2
