[project]
name = "Compare"
version = "0.1.0"
description = "Compare two packages"
requires-python = ">=3.12"
dependencies = [
    "duckdb",
    "icebug",
    "numpy",
    "pyarrow",
    "psutil",
    "pyspark",
    "tqdm",
    "graphframes-py>=0.11.0",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
docs = [
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "mkdocs>=1.6.1",
]

[tool.uv]
package = false

# Uncomment for a locally checked out source tree
#[tool.uv.sources]
#icebug = { path = "../icebug" }
